--- a/.github/workflows/payment.yml
+++ b/.github/workflows/payment.yml
@@ -48,7 +48,7 @@ jobs:
         echo "present working directory check"
         pwd
         ls -lrt
-       # ls -lrt mavenconfig
+       
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
@@ -63,6 +63,8 @@ jobs:
       uses: actions/download-artifact@v2
       with:
           name: maven-artifacts
+    - name: List contents of the directory
+      run: ls -R
 
 
     - name: Configure AWS credentials
