--- a/.github/workflows/payment.yml
+++ b/.github/workflows/payment.yml
@@ -51,7 +51,7 @@ jobs:
        
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install
 
     - name: Upload Maven artifacts
       uses: actions/upload-artifact@v2
