--- a/.github/workflows/payment.yml
+++ b/.github/workflows/payment.yml
@@ -67,21 +67,22 @@ jobs:
       run: ls -R
     - name: SonarQube Scan
       env:
-       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       run: |
-        mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.1.2184:sonar \
+        mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.1.2184:sonar \
+        -Dsonar.projectKey=vm8-payment-api \
+        -Dsonar.projectName=vm8-payment-api \
         -Dsonar.pullrequest.key=${{ github.event.pull_request.number }} \
         -Dsonar.pullrequest.branch=${{ github.event.pull_request.head.ref }} \
         -Dsonar.pullrequest.base=${{ github.event.pull_request.base.ref }} \
         -Dsonar.branch.name=${{ env.GITHUB_HEAD_REF }} \
-        -Dsonar.java.jdkHome=/opt/hostedtoolcache/Java_11_corretto_x64 \
+        -Dsonar.java.jdkHome=/opt/hostedtoolcache/Java_17_temurin_x64 \
         -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
         -Dsonar.exclusions=**/test/** \
         -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
       shell: bash
       working-directory: /home/runner/work/TestMavenProject/TestMavenProject
-
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
